Hotfix: Fix content overflow in search page

--- a/src/pages/Search.module.css
+++ b/src/pages/Search.module.css
@@ -1,3 +1,10 @@
+.searchPage {
+    height: 100%;
+    overflow-x: hidden;
+    padding: 20px 30px;
+    box-sizing: border-box;
+}
+
 .resultsContainer {
     display: flex;
     flex-wrap: wrap;
